fix alignment of custom cursor

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   margin-top: 20px;
   width: 335px;
   text-align: center;
-  cursor: url(img/X.png), auto;
+  cursor: url(img/X.png) 32 32, auto;
   border: 1px solid #CCC;
   border-radius: 50px;
   padding: 30px;
